# pixie

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  LICENSES.third-party  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: anaconda_upload.yml  pypi_upload.yml  test.yml
buildscripts/conda_recipes/pixie/: meta.yaml
buildscripts/incremental/: build.cmd  build.sh
docs/: environment.yml
docs/demo_scipy24/: Dockerfile
docs/docker/demo_scipy24/: Dockerfile
docs/source/: conf.py  contributing.rst  faqs.rst  index.rst  release_notes.rst
docs/source/reference/: index.rst
docs/source/tutorials/: index.rst
docs/source/user_guide/: cli.md  index.rst  install.md  (+4 more)
mvp/: README.rst  bootstrap.py  numba_bootstrap.patch  numba_helpers.py  objective_function.c  pixie_numba_compiler.py
pixie/: __init__.py  _version.py  cli.py  codegen_helpers.py  compiler.py  compiler_lock.py  cpus.py  dso_tools.py  llvm_types.py  mcext.py  overlay.py  overlay_injectors.py  platform.py  pyapi.py  selectors.py  types.py
pixie/targets/: __init__.py  aarch64.py  arm64.py  bsd_utils.py  common.py  darwin_info.py  x86_64.py
pixie/tests/: __init__.py  support.py  test_basic_dso.py  test_c_compiler.py  test_cli.py  test_cython.py  test_interface.py  test_isa_dispatch.py  test_isa_envvar_dispatch.py  test_numba_binding.py  test_opt_flags.py  test_overlay_injection.py  test_pixie_different_modules.py  test_pixie_fnptr.py  test_predefined_targets.py  test_retarget.py  test_selectors.py  test_source_filtering.py  test_specialize.py  test_target_description.py
scipy2024/: README.rst  blas_kernels.pyx  bootstrap.py  example_1.py  example_2.py  example_3.py  example_4.py  fd_kernel.pyx  mvp_daxpy_call.py  numba_aot_compile_optimiser.py  numba_aot_daxpy.py  numba_aot_impl.py  numba_aot_optimiser.py  numba_bootstrap.patch  numba_helpers.py  numba_mvp.py  objective_function.pyx  objective_function_derivative.c  pixie_c_compiler.py  pixie_compile_blas_kernels.py  pixie_compile_fd_kernel.py  pixie_compile_objective_function.py  pixie_compile_objective_function_derivative.py  pixie_demonstration.ipynb  pixie_numba_compiler.py
scipy2024/docker/: makefile
(+1 files in other folders)
